--- a/index.html
+++ b/index.html
@@ -63,11 +63,11 @@
                 <p class="fuente blanco w80 w70t w100m separarLineas">Nací en Buenos Aires, Argentina y desde muy chica me apasiona el arte. Con mis obras busco alcanzar el lado más infantil que todos tenemos dentro, pero también busco movilizar al espectador con el costado psicológico de mis pinturas. Trabajo utilizando diferentes técnicas como óleo, collage, técnica mixta, pasteles y laca vitral. </p>
             </div>
 
-            <div class="fondoBlanco w100 df columna centerY spacea vh30 vh80m w80m highlights marginTop2m">
+            <div class="fondoBlanco w100 df columna centerY spacea vh30 w80m vh100m marginTop2m">
 
                 <!--<h3 class="fuente w70">Higlights</h3>-->
 
-                <div class="w70 df spaceb centerY w80t columnaM w90m separarLineas spaceaM highlights">
+                <div class="w70 df spaceb centerY w80t columnaM w90m separarLineas spaceaM">
                     <ul class="vh25 df columna spacea w80t vh60m marginTop2m">
                         <li class="fuente">BADA 2016-'17-'18-'19-'21-'22-’23-’24</li>
                         <li class="fuente">Miembro de la Asociación Internacional de Artistas Visuales (IAVA)</li>
