--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                 <!--<h3 class="fuente w70">Higlights</h3>-->
 
                 <div class="w70 df spaceb centerY w80t columnaM w90m separarLineas spaceaM">
-                    <ul class="vh25 df columna spacea w80t vh60m marginTop2m">
+                    <ul class="vh25 df columna spacea w80t vh60m">
                         <li class="fuente">BADA 2016-'17-'18-'19-'21-'22-’23-’24</li>
                         <li class="fuente">Miembro de la Asociación Internacional de Artistas Visuales (IAVA)</li>
                         <li class="fuente">Exhibición en el Hotel Conrad Punta del Este</li>
@@ -106,7 +106,7 @@
 
     <footer id="footer" class="w100 df centerX fondoBlanco">
 
-        <div class="w80 df spacea centerY h100">
+        <div class="w80 df spacea centerY h100 invisibleT">
 
             <div class="df columna spaceb centerY h50">
                 <p><strong class="fuente negro">Contact:</strong></p>
@@ -114,7 +114,7 @@
                 <p class="parrafitos fuente w100m negro">aca el telefono</p>
             </div>
 
-            <div class="w20 df spacea w15"> 
+            <div class="w20 df spacea w15 invisibleT"> 
                 
                     <a href="" target="_blank"><i class="bi bi-instagram negro"></i></a>
                     <a href="" target="_blank"><i class="bi bi-instagram negro"></i></a>
