--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@
     <main class="df columna centerY">
 
         <!--hero section-->
-        <section id="slider" class="w95 df centerX centerY vh90 w100m">
-            <img id="imagenSlider" class="w60 objCover vh60 w80t w100m" src="" alt="">
+        <section id="slider" class="w95 df centerX centerY vh90 w100m vh60m">
+            <img id="imagenSlider" class="w60 objCover vh60 w80t vh30m w70m" src="" alt="">
             <h1></h1>
             <div class="w95 posAb df spaceb">
                 <button id="botonAnterior"><i class="bi bi-chevron-left blanco"></i></button>
