--- a/index.html
+++ b/index.html
@@ -58,31 +58,58 @@
 
             <h2 class="w100 fuente blanco">Sobre Mí</h2>
 
-            <div class="w70 vh25 df centerX spaceb w80t dfm columnaM vh70m spacebM marginTop2m">
-                <img class="objCover h100 w100m vh30m" src="assets/imgs/perfil-pato.jpg" alt="">
-                <p class="fuente blanco w80 w70t w100m separarLineas">Nací en Buenos Aires, Argentina y desde muy chica me apasiona el arte. Con mis obras busco alcanzar el lado más infantil que todos tenemos dentro, pero también busco movilizar al espectador con el costado psicológico de mis pinturas. Trabajo utilizando diferentes técnicas como óleo, collage, técnica mixta, pasteles y laca vitral. </p>
+            <div class="w70 vh25 marginTop4 df centerX spaceb w80t dfm columnaM vh70m spacebM marginTop2m">
+                <p class="fuente blanco w90 w70t w100m separarLineas">Nací en Buenos Aires, Argentina y desde muy chica me apasiona el arte. Con mis obras busco alcanzar el lado más infantil que todos tenemos dentro, pero también busco movilizar al espectador con el costado psicológico de mis pinturas. Trabajo utilizando diferentes técnicas como óleo, collage, técnica mixta, pasteles y laca vitral. </p>
             </div>
 
-            <div class="fondoBlanco w100 df columna centerY spacea vh30 w80m vh100m marginTop4m">
+            <div id="sobreMi2" class="fondoBlanco w100 df columna centerY spacea vh80 w80m vh100m marginTop4m">
 
                 <!--<h3 class="fuente w70">Higlights</h3>-->
 
-                <div class="w70 df spaceb centerY w80t columnaM w90m separarLineas spaceaM">
-                    <ul class="vh25 df columna spacea w80t vh60m">
-                        <li class="fuente">BADA 2016-'17-'18-'19-'21-'22-’23-’24</li>
-                        <li class="fuente">Miembro de la Asociación Internacional de Artistas Visuales (IAVA)</li>
-                        <li class="fuente">Exhibición en el Hotel Conrad Punta del Este</li>
-                        <li class="fuente">Premio Internacional Caravaggio - Premio Internacional de París ortogado por Effeto Arte</li>
-                        <li class="fuente">Premio Artistic Excellence ortogado por Circle Fundation for the Arts</li>
-                        <li class="fuente">MADS Milano - Italia</li>
-                    </ul>
-                    <img class="w20 w70m" src="assets/imgs/art_award.jpg" alt="art award">
+                <div class="w80 vh80 df columna spacee centerY w80t columnaM w90m separarLineas spaceaM">
+
+                    <div class="df vh30 w80 spaceb">
+
+                        <img class="objCover h100 w100m vh30m" src="assets/imgs/perfil-pato.jpg" alt="">
+
+                        <ul id="carrera" class="vh25 df columna spacea w80t vh60m">
+                            <li class="fuente">Miembro de la Asociación Internacional de Artistas Visuales (IAVA)</li>
+                            <li class="fuente">BADA 2016-'17-'18-'19-'21-'22-’23-’24</li>
+                            <li class="fuente"> Feria de Arte FIABCN en Barcelona, España</li>
+                            <li class="fuente"> Tokio Tower Art Fair, Tokio, Japón</li>
+                            <li class="fuente">MasterArt Fair, Grand Hotel de Punta del Este, Punta del Este, Uruguay </li>
+                        </ul>
+
+                    </div>
+
+                    <div class="df spaceb w80 vh40">
+
+                        <div class="df columna spacee">
+
+                            <h3 class="fuente">AWARDS</h3>
+
+                            <ul class="vh30 df columna spacea w80t vh60m">
+                                <li class="fuente">Premio Internacional Caravaggio - Premio Internacional de París ortogado por Effeto Arte</li>
+                                <li class="fuente">Premio Internacional Leonardo Da Vinci, Milan, Italia</li>
+                                <li class="fuente">Ambassador of Art, Firenze, Italia</li>
+                                <li class="fuente">Leonardo Da Vinci de Oro, Milan, Italia</li>
+                                <li class="fuente">Premio Internacional a la carrera Artística, San Remo, Italia</li>
+                                <li class="fuente"> Artist of the year 2025, Firenze, Italia</li>
+                            </ul>
+
+                        </div>
+
+                        <img class="w30 w70m objCover" src="assets/imgs/art_award.jpg" alt="art award">
+
+                    </div>
+ 
+
                 </div>
             </div>
         </section>
 
         <!--obras-->
-        <section id="obras" class="w95 df columna centerY marginTop2m">
+        <section id="obras" class="marginTop4 w95 df columna centerY marginTop2m">
 
             <h2 class="w100 fuente blanco">Obras</h2>
 
