--- a/index.html
+++ b/index.html
@@ -16,11 +16,20 @@
 </head>
 <body class="fondoGris df columna centerY">
 
-    <header class="vh10 w100 centerY centerX">
-        <div class="w95 df spaceb centerY centerX h100">
-            <!--logo-->
-            <img src="" alt="">
+    <header class="vh10 w100 df centerY centerX">
 
+        <div class="w95 df spaceb centerY centerX h100">
+
+            <!--logo-->
+            <div class="logo-container df spaceb posRel">
+
+                <img src="assets/logo/p-blanca.png" alt="P" class="p-img">
+                <img src="assets/logo/r-blanca_1.png" alt="R" class="r-img">
+
+                <img src="assets/logo/logo-blanco-comp.png" alt="" class="invisibleA posAb name">
+                
+            </div>
+            
 
             <button id="abrir-menu" class="invisible sinBorde fondoTransparente"><i class="bi bi-list blanco"></i></button>
 
@@ -54,21 +63,23 @@
         </section>
 
         <!--sobre mi-->
-        <section id="sobreMi" class="w95 df columna centerY spacea vh90 vh100m">
+        <section id="sobreMi" class="w95 df columna centerY spacea vh40 vh60m">
 
             <h2 class="w100 fuente blanco">Sobre Mí</h2>
 
-            <div class="w70 vh25 marginTop4 df centerX spaceb w80t dfm columnaM vh70m spacebM marginTop2m">
+            <div class="w70 vh25 df centerX spaceb w80t dfm columnaM vh30m spacebM">
                 <p class="fuente blanco w90 w70t w100m separarLineas">Nací en Buenos Aires, Argentina y desde muy chica me apasiona el arte. Con mis obras busco alcanzar el lado más infantil que todos tenemos dentro, pero también busco movilizar al espectador con el costado psicológico de mis pinturas. Trabajo utilizando diferentes técnicas como óleo, collage, técnica mixta, pasteles y laca vitral. </p>
             </div>
 
+        </section>
+
+        <section id="sobreMi2" class="w100 marginTop2m">
+
             <div id="sobreMi2" class="fondoBlanco w100 df columna centerY spacea vh80 w80m vh100m marginTop4m">
 
-                <!--<h3 class="fuente w70">Higlights</h3>-->
+                <div class="w90 vh80 df columna spacee centerY w80t columnaM w90m separarLineas spaceaM">
 
-                <div class="w80 vh80 df columna spacee centerY w80t columnaM w90m separarLineas spaceaM">
-
-                    <div class="df vh30 w80 spaceb">
+                    <div class="df centerY vh30 w100">
 
                         <img class="objCover h100 w100m vh30m" src="assets/imgs/perfil-pato.jpg" alt="">
 
@@ -82,13 +93,15 @@
 
                     </div>
 
-                    <div class="df spaceb w80 vh40">
+                    <div class="df fEnd w100 vh40">
 
-                        <div class="df columna spacee">
+                        <div class="df centerY w70 bordeRojo">
+
+                        <div class="df columna spacee h100">
 
                             <h3 class="fuente">AWARDS</h3>
 
-                            <ul class="vh30 df columna spacea w80t vh60m">
+                            <ul class="vh30 w90 df columna spacea w80t vh60m">
                                 <li class="fuente">Premio Internacional Caravaggio - Premio Internacional de París ortogado por Effeto Arte</li>
                                 <li class="fuente">Premio Internacional Leonardo Da Vinci, Milan, Italia</li>
                                 <li class="fuente">Ambassador of Art, Firenze, Italia</li>
@@ -99,13 +112,16 @@
 
                         </div>
 
-                        <img class="w30 w70m objCover" src="assets/imgs/art_award.jpg" alt="art award">
+                        <img id="imgCortada" class="w30 vh25 w70m objCover marginTop4" src="assets/imgs/art_award.jpg" alt="art award">
+
+                    </div>
 
                     </div>
  
 
                 </div>
             </div>
+
         </section>
 
         <!--obras-->
