--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 
                     <div class="df fEnd w100 vh40">
 
-                        <div class="df centerY w70 bordeRojo">
+                        <div class="df centerY w70">
 
                         <div class="df columna spacee h100">
 
@@ -149,20 +149,32 @@
 
     <footer id="footer" class="w100 df centerX fondoBlanco">
 
-        <div class="w80 df spacea centerY h100 invisibleT">
+        <div class="w80 df spaceb centerY h100 invisibleT">
 
-            <div class="df columna spaceb centerY h50">
-                <p><strong class="fuente negro">Contact:</strong></p>
-                <p class="parrafitos fuente w100m negro">aca iria el mail</p>
-                <p class="parrafitos fuente w100m negro">aca el telefono</p>
+            <!--contacto-->
+            <div class="df columna spaceb w30">
+
+                <div class="w100m negro df">
+                    <i class="bi bi-envelope iconoRed"></i>
+                    <p class="fuente parrafitos">patoreichler@yahoo.com.ar</p>
+                </div>
+
+                <div class="parrafitos fuente w100m negro df">
+                    <i class="bi bi-instagram iconoRed"></i>
+                    <p class="fuente parrafitos">@patoreichler</p>
+                </div>
+
             </div>
 
-            <div class="w20 df spacea w15 invisibleT"> 
-                
-                    <a href="" target="_blank"><i class="bi bi-instagram negro"></i></a>
-                    <a href="" target="_blank"><i class="bi bi-instagram negro"></i></a>
-                    <a href="" target="_blank"><i class="bi bi-instagram negro"></i></a>
-                
+            <!--logo-->
+            <div class="w30 df centerX centerY">
+                <img class="w50 objCover" src="assets/logo/logo-negro-completo.png" alt="">
+            </div>
+
+            <!--rights-->
+            <div class="rights w30 df columna">
+                <p class="fuente">Designed by Mateo de Elias</p>
+                <p class="fuente">Developed by Victoria Villalba</p>
             </div>
 
         </div>   
