--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 <img src="assets/logo/p-blanca.png" alt="P" class="p-img">
                 <img src="assets/logo/r-blanca_1.png" alt="R" class="r-img">
 
-                <img src="assets/logo/logo-blanco-comp.png" alt="" class="invisibleA posAb name">
+                <a class="fitContent posAb" href="index.html"><img src="assets/logo/logo-blanco-comp.png" alt="" class="invisibleA name"></a>
                 
             </div>
             
@@ -42,7 +42,7 @@
                     <li><a class="fuente blanco" href="index.html">Home</a></li>
                     <li><a class="fuente blanco" href="#sobreMi">Sobre Mí</a></li>
                     <li><a class="fuente blanco" href="#obras">Obras</a></li>
-                    <li><a class="fuente blanco" href="https://www.instagram.com/patoreichler?igsh=enJ3NjF0anl0dWJt" target="_blank">Contacto</a></li>
+                    <li><a class="fuente blanco" href="https://www.instagram.com/patoreichler/" target="_blank">Contacto</a></li>
                 </ul>
             </nav>
         </div>
@@ -53,7 +53,7 @@
     <main class="df columna centerY">
 
         <!--hero section-->
-        <section id="slider" class="w95 df centerX centerY vh90 w100m">
+        <section id="slider" class="w95 df centerX centerY vh100 w100m">
             <img id="imagenSlider" class="w60 objCover vh60 w80t vh60m w100m" src="" alt="">
             <h1></h1>
             <div class="w95 posAb df spaceb">
@@ -63,27 +63,28 @@
         </section>
 
         <!--sobre mi-->
-        <section id="sobreMi" class="w95 df columna centerY spacea vh40 vh60m">
+        <section id="sobreMi" class="w95 df columna centerY spacee vh40 vh60m">
 
             <h2 class="w100 fuente blanco">Sobre Mí</h2>
 
-            <div class="w70 vh25 df centerX spaceb w80t dfm columnaM vh30m spacebM">
-                <p class="fuente blanco w90 w70t w100m separarLineas">Nací en Buenos Aires, Argentina y desde muy chica me apasiona el arte. Con mis obras busco alcanzar el lado más infantil que todos tenemos dentro, pero también busco movilizar al espectador con el costado psicológico de mis pinturas. Trabajo utilizando diferentes técnicas como óleo, collage, técnica mixta, pasteles y laca vitral. </p>
+            <div class="w70 vh25 df centerX spaceb vh10t w90t dfm columnaM vh30m spacebM">
+                <p class="fuente blanco w90 w100t w100m separarLineas">Nací en Buenos Aires, Argentina y desde muy chica me apasiona el arte. Con mis obras busco alcanzar el lado más infantil que todos tenemos dentro, pero también busco movilizar al espectador con el costado psicológico de mis pinturas. Trabajo utilizando diferentes técnicas como óleo, collage, técnica mixta, pasteles y laca vitral. </p>
             </div>
 
         </section>
 
-        <section id="sobreMi2" class="w100 marginTop2m">
+        <!--sobre mi 2-->
+        <section id="sobreMi2" class="w100 marginTop2m fondoBlanco">
 
-            <div id="sobreMi2" class="fondoBlanco w100 df columna centerY spacea vh80 w80m vh100m marginTop4m">
+            <div class="fondoBlanco w100 df columna centerY spacea vh80 w100m vh100m">
 
                 <div class="w90 vh80 df columna spacee centerY w80t columnaM w90m separarLineas spaceaM">
 
-                    <div class="df centerY vh30 w100">
+                    <div class="df centerY vh30 w100 vh80m columnaM">
 
-                        <img class="objCover h100 w100m vh30m" src="assets/imgs/perfil-pato.jpg" alt="">
+                        <img class="objCover h100 w100m vh30m marginTop2m" src="assets/imgs/perfil-pato.jpg" alt="">
 
-                        <ul id="carrera" class="vh25 df columna spacea w80t vh60m">
+                        <ul id="carrera" class="vh25 df columna spacea w80t w90m vh45m">
                             <li class="fuente">Miembro de la Asociación Internacional de Artistas Visuales (IAVA)</li>
                             <li class="fuente">BADA 2016-'17-'18-'19-'21-'22-’23-’24</li>
                             <li class="fuente"> Feria de Arte FIABCN en Barcelona, España</li>
@@ -93,15 +94,15 @@
 
                     </div>
 
-                    <div class="df fEnd w100 vh40">
+                    <div class="df fEnd w100 vh40 vh100m">
 
-                        <div class="df centerY w70">
+                        <div class="df centerY w70 w100t vh100m columnaM spaceaM">
 
-                        <div class="df columna spacee h100">
+                        <div class="df columna spacee h100 vh60m">
 
                             <h3 class="fuente">AWARDS</h3>
 
-                            <ul class="vh30 w90 df columna spacea w80t vh60m">
+                            <ul class="vh30 w90 df columna spacea w80t vh45m">
                                 <li class="fuente">Premio Internacional Caravaggio - Premio Internacional de París ortogado por Effeto Arte</li>
                                 <li class="fuente">Premio Internacional Leonardo Da Vinci, Milan, Italia</li>
                                 <li class="fuente">Ambassador of Art, Firenze, Italia</li>
@@ -112,7 +113,7 @@
 
                         </div>
 
-                        <img id="imgCortada" class="w30 vh25 w70m objCover marginTop4" src="assets/imgs/art_award.jpg" alt="art award">
+                        <img id="imgCortada" class="w30 vh25 w70m objCover vh20m" src="assets/imgs/art_award.jpg" alt="art award">
 
                     </div>
 
@@ -149,30 +150,34 @@
 
     <footer id="footer" class="w100 df centerX fondoBlanco">
 
-        <div class="w80 df spaceb centerY h100 invisibleT">
+        <div class="w80 df spaceb centerY h100 footerT columnaM spaceaM">
 
             <!--contacto-->
-            <div class="df columna spaceb w30">
+            <div class="df columna spaceb w30 w90m dfm centerYm">
 
-                <div class="w100m negro df">
-                    <i class="bi bi-envelope iconoRed"></i>
-                    <p class="fuente parrafitos">patoreichler@yahoo.com.ar</p>
-                </div>
+                <div class="w30m contactF">
 
-                <div class="parrafitos fuente w100m negro df">
-                    <i class="bi bi-instagram iconoRed"></i>
-                    <p class="fuente parrafitos">@patoreichler</p>
+                    <a href="mailto:patoreichler@yahoo.com.ar" class="negro df fitContentM">
+                        <i class="bi bi-envelope iconoRed"></i>
+                        <p class="fuente parrafitos invisibleM">patoreichler@yahoo.com.ar</p>
+                    </a>
+
+                    <a href="https://www.instagram.com/patoreichler/" class="fuente negro df fitContentM">
+                        <i class="bi bi-instagram iconoRed"></i>
+                        <p class="fuente invisibleM">@patoreichler</p>
+                    </a>
+
                 </div>
 
             </div>
 
             <!--logo-->
-            <div class="w30 df centerX centerY">
+            <div class="w30 df centerX centerY w90m">
                 <img class="w50 objCover" src="assets/logo/logo-negro-completo.png" alt="">
             </div>
 
             <!--rights-->
-            <div class="rights w30 df columna">
+            <div class="rights w30 df columna w90m">
                 <p class="fuente">Designed by Mateo de Elias</p>
                 <p class="fuente">Developed by Victoria Villalba</p>
             </div>
