--- a/index.html
+++ b/index.html
@@ -157,10 +157,10 @@
 
                 <div class="w30m contactF">
 
-                    <a href="mailto:patoreichler@yahoo.com.ar" class="negro df fitContentM">
+                    <div class="negro df fitContentM">
                         <i class="bi bi-envelope iconoRed"></i>
                         <p class="fuente parrafitos invisibleM">patoreichler@yahoo.com.ar</p>
-                    </a>
+                    </div>
 
                     <a href="https://www.instagram.com/patoreichler/" class="fuente negro df fitContentM">
                         <i class="bi bi-instagram iconoRed"></i>
