--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 
                         <img class="objCover h100 w100m vh30m marginTop2m" src="assets/imgs/perfil-pato.jpg" alt="">
 
-                        <ul id="carrera" class="vh25 df columna spacea w80t w90m vh45m">
+                        <ul id="carrera" class="vh25 df columna spacea w80t w90m vh45m marginTopC">
                             <li class="fuente">Miembro de la Asociación Internacional de Artistas Visuales (IAVA)</li>
                             <li class="fuente">BADA 2016-'17-'18-'19-'21-'22-’23-’24</li>
                             <li class="fuente"> Feria de Arte FIABCN en Barcelona, España</li>
@@ -98,9 +98,9 @@
 
                         <div class="df centerY w70 w100t vh100m columnaM spaceaM">
 
-                        <div class="df columna spacee h100 vh60m">
+                        <div class="df columna spacee h100 vh60m marginTopCmas">
 
-                            <h3 class="fuente">AWARDS</h3>
+                            <h3 class="fuente marginTopCmas">AWARDS</h3>
 
                             <ul class="vh30 w90 df columna spacea w80t vh45m">
                                 <li class="fuente">Premio Internacional Caravaggio - Premio Internacional de París ortogado por Effeto Arte</li>
@@ -111,9 +111,11 @@
                                 <li class="fuente"> Artist of the year 2025, Firenze, Italia</li>
                             </ul>
 
+                            <img id="imgCortada" class="w30 vh25 w70m objCover vh20m" src="assets/imgs/art_award.jpg" alt="art award">
+
                         </div>
 
-                        <img id="imgCortada" class="w30 vh25 w70m objCover vh20m" src="assets/imgs/art_award.jpg" alt="art award">
+                        
 
                     </div>
 
@@ -126,7 +128,7 @@
         </section>
 
         <!--obras-->
-        <section id="obras" class="marginTop4 w95 df columna centerY marginTop2m">
+        <section id="obras" class="marginTop4 w95 df columna centerY marginTop2m marginTopCmas">
 
             <h2 class="w100 fuente blanco">Obras</h2>
 
