--- a/index.html
+++ b/index.html
@@ -98,11 +98,13 @@
 
                         <div class="df centerY w70 w100t vh100m columnaM spaceaM">
 
-                        <div class="df columna spacee h100 vh60m marginTopCmas">
+                        <div class="df columnaM">
+
+                            <div class="df columna spacee h100 vh60m">
 
                             <h3 class="fuente marginTopCmas">AWARDS</h3>
 
-                            <ul class="vh30 w90 df columna spacea w80t vh45m">
+                            <ul class="vh30 w90 df columna spacea w80t vh45m w90m">
                                 <li class="fuente">Premio Internacional Caravaggio - Premio Internacional de París ortogado por Effeto Arte</li>
                                 <li class="fuente">Premio Internacional Leonardo Da Vinci, Milan, Italia</li>
                                 <li class="fuente">Ambassador of Art, Firenze, Italia</li>
@@ -110,6 +112,8 @@
                                 <li class="fuente">Premio Internacional a la carrera Artística, San Remo, Italia</li>
                                 <li class="fuente"> Artist of the year 2025, Firenze, Italia</li>
                             </ul>
+
+                            </div>
 
                             <img id="imgCortada" class="w30 vh25 w70m objCover vh20m" src="assets/imgs/art_award.jpg" alt="art award">
 
